# mpigeopandas

./: README.md  README.rst  pyproject.toml  requirements.txt
example/: test_chunked.py  test_queue.py  test_single.py
mpigeopandas/: __init__.py
mpigeopandas/src/: mpi_Dataframe.py
