[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpigeopandas"
version = "1.0.0"
description = "Distribute shapefiles across multiple cores"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.10"
authors = [
    { name = "Leon Foks", email = "nfoks@contractor.usgs.gov" },
]
dynamic = ["dependencies"]
classifiers = [
    'License :: OSI Approved',
    'License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering'
]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
docs = ["sphinx_gallery", "sphinx_rtd_theme"]

[tool.setuptools.packages.find]
where = ["."]